--- a/Frontend/app/src/main/res/layout/cal_month_layout.xml
+++ b/Frontend/app/src/main/res/layout/cal_month_layout.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="Weekly"
-        android:textColor="@color/blue"
+        android:textColor="@color/black"
         android:background="@null"
         android:textStyle="bold"
         android:onClick="weeklyAction"
@@ -46,7 +46,7 @@
             android:text="Feb 2021"
             android:textSize="20sp"
             android:textAlignment="center"
-            android:textColor="@color/black"/>
+            android:textColor="@color/blue"/>
 
         <Button
             android:layout_width="0dp"
